fix mall-admin-ui